--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -80,7 +80,7 @@
           ],
           "end": "La participation est gratuite, mais l’inscription est obligatoire."
         },
-        "register": "S'inscrire"
+        "register": "S'inscrire à la conférence (et aux workshops)"
       },
       "call-for-paper": {
         "title": "Call for Paper",
@@ -160,7 +160,7 @@
           "s6": "Torsten Braun, University of Bern, Switzerland",
           "s7": "Andrea Guerrieri, EPFL, Switzerland",
           "s8": "Matthew Vowels, University of Lausanne, Switzerland",
-          "s9": " Silvan Zahno, HES-SO Valais/Wallis, Switzerland",
+          "s9": "Silvan Zahno, HES-SO Valais/Wallis, Switzerland",
           "s10": "Mara Graziani, IBM Research, Switzerland",
           "s11": "Adrian Holzer, University of Neuchâtel, Switzerland",
           "s12": "Andreas Fischer, HES-SO Fribourg, Switzerland",
@@ -294,6 +294,10 @@
         }
       },
       "workshops": {
+        "header": {
+          "title": "Le lundi 27 janvier est dédié à des workshops sur des thèmes spécifiques.",
+          "description": "Cinq workshops auront lieu dans 3 salles. Chaque workshop est sous la responsabilité d'un comité distinct et séparé du comité d'organisation des AI-days. Pour s'inscrire, utiliser <a href=\"https://form.jotform.com/242613280391351\">le formulaire d'inscription aux AI-days</a>, en sélectionnant le lundi, et en choisissant votre ou vos workshops préférés. Attention: les workshops 3a et 3b (RAG et MLOPS) ont un nombre de participants limité, les premiers inscrits auront la priorité.</p> Les workshops 2a et 2b, ainsi que 3a et 3b se succèdent dans la même salle."
+        },
         "title-27": "Journée des Workshops – 27 Janvier",
         "venue-27": "Pathé Balexert",
         "description-title": "Description",
