--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -167,7 +167,7 @@
           "s13": "Ricardo Chavarriaga, ZHAW, Switzerland",
           "s14": "Snezana Nektarijevic, SDSC, Switzerland",
           "s15": "Bastian Grossenbacher, UNIFR, Switzerland",
-          "s16": "Corrine Fredouille, Université d'Avignon, France",
+          "s16": "Corinne Fredouille, Université d'Avignon, France",
           "s17": "Diego Collarana, Fraunhofer Institute, Germany",
           "s18": "Stéphane Galland, Université de Technologie de Belfort Montbéliard, France",
           "s19": "Alina Matei, University of Neuchâtel, Switzerland",
