Update submission deadlines, and poster/demos

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -120,7 +120,7 @@
             },
             {
               "title": "Interactive demonstration (+ optional poster)",
-              "description": "An interactive demonstration, described by a 1-page document (for the selection process). The accompanying document should contain a title, the name(s) of the author(s), should describe what will be demonstrated, and which conclusions visitors are expected to draw. It is possible to accompany the demo with a poster (which can be submitted as supporting document also the main 1-page document). Please note that you are responsible for your own demonstration and no materials will be provided, except the possibility to hand your poster, if any. Demonstration submissions must be made <a href=\"mailto:valerie.schurchtodeschini@he-arc.ch,pamela.delgado@hevs.ch\">by sending an email to the program chairs</a>."
+              "description": "An interactive demonstration, described by a 1-page document (for the selection process). The accompanying document should contain a title, the name(s) of the author(s), and should describe what will be demonstrated, as well as the conclusions visitors are expected to draw. It is possible to accompany the demo with a poster (which can be submitted as a supporting document alongside the main 1-page document). Please note that you are responsible for your own demonstration and that no materials will be provided, except for the possibility to hang your poster, if any. Demonstration submissions must be made <a href=\"mailto:valerie.schurchtodeschini@he-arc.ch,pamela.delgado@hevs.ch\">by sending an email to the program chairs</a>."
             }
           ]
         },
