--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -392,7 +392,7 @@
       },
       "speakers": {
         "hero": {
-          "title": "Nos Conférenciers invités"
+          "title": "Nos Conférenciers Invités"
         },
         "invitedSpeakers": {
           "sectionTitle": "Intervenants Invités",
