25 update workshop and speaker (#26)
Co-authored-by: axelcasareale <axel.casareale@hefr.ch>

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -35,7 +35,7 @@
           {
             "name": "Speakers",
             "component": "speakers",
-            "enabled": "false",
+            "enabled": "true",
             "url": "/speakers"
           },
           {
@@ -306,6 +306,7 @@
         "equipment-title": "Equipment",
         "activities-title": "Activities",
         "topics-title": "Topics",
+        "workshop-cta": "View PDF",
         "workshops": [
           {
             "title": "Workshop 1: Workshop on Compute Infrastructures for IA applications in the wild",
@@ -324,7 +325,8 @@
               "How to map workloads onto hardware.",
               "Challenging aspects of AI infrastructure.",
               "Projects aimed at improving AI/ML infrastructure."
-            ]
+            ],
+            "pdfLink": "/PDF/Session1.pdf"
           },
           {
             "title": "Workshop 2a : Edge AI - Tools, devices, and methods",
@@ -341,7 +343,8 @@
             "topics": [
               "Introduction to lightweight neural networks and model compression techniques.",
               "Real-world case studies showing how Edge AI is applied."
-            ]
+            ],
+            "pdfLink": "/PDF/Session2a.pdf"
           },
           {
             "title": "Workshop 2b: AI for Local Energy Systems",
@@ -352,7 +355,8 @@
             },
             "activities": [
               "To be announced."
-            ]
+            ],
+            "pdfLink": "/PDF/Session2b.pdf"
           },
           {
             "title": "Workshop 3a: Retrieval-Augmented Generation (RAG)",
@@ -366,7 +370,8 @@
               "Hands-on examples using Google Colab.",
               "Real-world implementation of RAG applications.",
               "Discussions on practical RAG deployments."
-            ]
+            ],
+            "pdfLink": "/PDF/Session3a.pdf"
           },
           {
             "title": "Workshop 3b: Machine Learning Operations - MLOps",
@@ -380,9 +385,44 @@
               "Exploration of the RAG experiment.",
               "Transformation of the experiment to reproduce and evaluate the quality of the model.",
               "Effective collaboration to build a reliable and functional model over time."
-            ]
+            ],
+            "pdfLink": "/PDF/Session3b.pdf"
           }
         ]
+      },
+      "speakers": {
+        "hero": {
+          "title": "Our Guest Speakers"
+        },
+        "invitedSpeakers": {
+          "sectionTitle": "Invited Speakers",
+          "speakers": [
+            {
+              "name": "Giorgio Pauletto",
+              "bio": "Giorgio Pauletto is Director of Foresight, Strategy and Innovation at Services Industriels de Genève (SIG), an autonomous public company specializing in renewable energies and the environment. He holds a doctorate in economics, statistics and quantitative methods from the University of Geneva, and has been a researcher at Stanford and Yale",
+              "title": "Will artificial intelligence save the planet or deplete it?",
+              "para": "Artificial intelligence is opening up promising prospects for optimizing our energy consumption and supporting the ecological transition. But its own environmental impact, linked to high resource consumption, raises questions. Is it really a sustainable solution, or will it become a new burden for our planet?",
+              "photo": "/speakers/giorgio-pauletto.png"
+            },
+            {
+              "name": "To be annouced",
+              "bio": "To be annouced",
+              "title": "To be annouced",
+              "para": "To be annouced",
+              "photo": "/speakers/generic-profile.jpg"
+            }
+          ]
+        },
+        "moderatorsAndPanelists": {
+          "sectionTitle": "Moderators and Panelists",
+          "panelists": [
+            {
+              "name": "To be annouced",
+              "bio": "To be annouced",
+              "photo": "/speakers/generic-profile.jpg"
+            }
+          ]
+        }
       },
       "footer": {
         "title": "Our Platinum partners",
