--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -318,6 +318,7 @@
             "activities": [
               "The workshop will feature keynote and invited presentations, but the main focus will be on short (~10-15min) presentations where participants will share topics such as technologies being tested or in use, workload mapping, specific challenges, or projects aimed at improving AI infrastructure.",
               "These presentations will be structured to allow more people to participate, with a typical format being use-case description, pain points, and potential solutions.",
+              "We are looking for short presentations! Please contact the workshop organizers if you have a subject to propose (details in the PDF).",
               "We might also organize breakout groups to foster collaborations and to work toward creating a 'Swiss-AI-sys-admin' community."
             ],
             "topics": [
