--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -318,6 +318,7 @@
             "activities": [
               "Ce Workshop comprendra des présentations principales et invitées, mais se concentrera surtout sur des présentations courtes (~10-15 min) au cours desquelles les participants partageront des sujets tels que les technologies en test ou en utilisation, la répartition des charges de travail, les défis spécifiques ou des projets visant à améliorer l'infrastructure IA.",
               "Ces présentations seront structurées simplement afin de permettre à un plus grand nombre de personnes de participer, avec un format typique décrivant le cas d'utilisation, les points de douleur et les solutions potentielles.",
+              "Nous cherchons des propositions de présentations courtes! Si vous avez un intérêt, manifestez-vous auprès des organisateurs (détails dans le PDF).",
               "Nous organiserons également des groupes de travail pour encourager la collaboration et travailler à la création d'une communauté 'IA-sys-admin'."
             ],
             "topics": [
